<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Current balance display -->
    <TextView
        android:id="@+id/currentBalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginBottom="10dp" />

    <!-- Input for the new amount -->
    <EditText
        android:id="@+id/editBalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/enterAmountHint" />

    <!-- Buttons for actions -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp">

        <!--    Cancel button    -->
        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/editBalanceButtons"
            app:backgroundTint="@null"
            android:text="@string/cancelButtonLabel" />

        <!-- Add button -->
        <Button
            android:id="@+id/addButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/editBalanceButtons"
            app:backgroundTint="@null"
            android:text="@string/addButtonLabel" />

        <!-- Subtract button -->
        <Button
            android:id="@+id/subtractButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/editBalanceButtons"
            app:backgroundTint="@null"
            android:text="@string/subtractButtonLabel" />

        <!-- Replace button -->
        <Button
            android:id="@+id/replaceButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/editBalanceButtons"
            app:backgroundTint="@null"
            android:text="@string/replaceButtonLabel" />
    </LinearLayout>
</LinearLayout>
